--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -1,20 +1,30 @@
-
 .navbar {
-    background-color: #3498db;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 210px;
+  background-color: rgb(214, 209, 209); 
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 1rem; 
+  margin-left: 180px;
+}
+
+.navbar .leftnav i {
+  cursor: pointer;
+}
+
+.navbar .d-flex {
+  align-items: center;
+}
+
+.navbar i {
+  font-size: 1.5rem; 
+}
+
+.navbar span {
+  font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
   }
-  .navbar .leftnav i {
-    cursor: pointer;
-  
-  }
-  
-  @media (max-width: 768px) {
-    .navbar {
-      flex-direction: column;
-    }
-  }
-  
+}
