--- a/src/assets/styles/sidebar.css
+++ b/src/assets/styles/sidebar.css
@@ -1,6 +1,6 @@
 /* Sidebar container */
 .sidebar {
-    width: 220px;
+    width: 185px;
     background-color: #2c3e50;
     color: #fff;
     transition: width 0.3s ease;
@@ -14,7 +14,7 @@
   }
 
   .sidebar.close {
-    width: 80px;
+    width: 70px;
   }
   
   .toggle-btn {
@@ -35,6 +35,7 @@
   .menu-link {
     list-style: none;
     font-size: 15px;
+    padding-top: 35px;
     margin: 0;
   }
   
@@ -49,11 +50,13 @@
     display: flex;
     align-items: center;
     transition: background-color 0.3s;
+   
   }
 
   .icon {
-    margin-right: 35px;
+    margin-right: 20px;
     font-size: 25px;
+
   }
 
   .menu-link a:hover {
@@ -66,7 +69,7 @@
   }
   
   .submenu a {
-    padding-left: 10px;
+    padding-left: 5px;
   }
  
   .search-container {
@@ -81,7 +84,7 @@
     color: #fff;
     border-bottom: 1px solid #fff;
     outline: none;
-    padding: 5px;
+  
   }
   
   /* Responsive design for small screens */
@@ -95,7 +98,8 @@
   }
   /******************employeecss************************/
   .table-container #headcolor{
-    background-color: #3498db;
-    color: white;
+    background-color:  rgb(226, 224, 224);
+    color: rgb(27, 25, 25);
+    width:"60vw";
   }
   
