--- a/src/assets/styles/sidebar.css
+++ b/src/assets/styles/sidebar.css
@@ -1,105 +1,70 @@
 /* Sidebar container */
 .sidebar {
-    width: 185px;
-    background-color: #2c3e50;
-    color: #fff;
-    transition: width 0.3s ease;
-    position: fixed;
-    height: 100vh;
-    top: 0;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    left: 0;
-  }
+  width: 13%;
+  /* background-color: #2c3e50; */
+  background-color: #324264;
+  color: #fff;
+  transition: width 0.3s ease;
+  position: fixed;
+  height: 100vh;
+  top: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  left: 0;
+}
 
-  .sidebar.close {
-    width: 70px;
-  }
-  
-  .toggle-btn {
-    font-size: 24px;
-    cursor: pointer;
-    color: #fff;
-    transition: transform 0.3s ease;
-  }
-  
-  .stext{
-    font-size: medium;
-  }
+.sidebar.close {
+  width: 70px;
+}
 
-  .sidebar.close .toggle-btn {
-    transform: rotate(180deg);
-  }
+.toggle-btn {
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.sidebar.close .toggle-btn {
+  transform: rotate(0deg);
+  margin-right: 15px;
+}
+
+.menu-link {
+  list-style: none;
+  font-size: 15px;
+  padding-top: 35px;
+  margin: 0;
+}
+
+.menu-link li {
+  margin-bottom: 25px;
  
-  .menu-link {
-    list-style: none;
-    font-size: 15px;
-    padding-top: 35px;
-    margin: 0;
-  }
-  
-  .menu-link li {
-    margin-bottom: 25px;
-   
-  }
-  
-  .menu-link a {
-    color: #fff;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    transition: background-color 0.3s;
-   
-  }
+}
 
-  .icon {
-    margin-right: 20px;
-    font-size: 25px;
-
-  }
-
-  .menu-link a:hover {
-    background-color: #707274;
-  }
-
-  .submenu {
-    padding-left: 20px;
-    background-color: #3d4852;
-  }
-  
-  .submenu a {
-    padding-left: 5px;
-  }
+.menu-link a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  transition: background-color 0.3s;
  
-  .search-container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
+}
+
+.icon {
+  margin-right: 30px;
+  font-size: 25px;
+  margin-left: 15px;
+
+}
+
+.menu-link a:hover {
+  background-color: #707274;
+}
+
+/* Responsive design for small screens */
+@media (max-width: 768px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+    overflow: visible;
   }
-  
-  .search-input {
-    border: none;
-    background: transparent;
-    color: #fff;
-    border-bottom: 1px solid #fff;
-    outline: none;
-  
-  }
-  
-  /* Responsive design for small screens */
-  @media (max-width: 768px) {
-    .sidebar {
-      width: 100%;
-      height: auto;
-      position: relative;
-      overflow: visible;
-    }
-  }
-  /******************employeecss************************/
-  .table-container #headcolor{
-    background-color:  rgb(226, 224, 224);
-    color: rgb(27, 25, 25);
-    width:"60vw";
-  }
-  
+}
